--- a/helm/templates/movie-db-service.yaml
+++ b/helm/templates/movie-db-service.yaml
@@ -7,6 +7,6 @@ spec:
   ports:
     - port: 5432
       targetPort: 5432
-      nodePort: 30506
+      nodePort: {{ .Values.postgres.nodePort }}
   selector:
     app: postgresql
